# observee

./: .gitignore  CONTRIBUTING.md  README.MD  index.d.ts  index.js  package-lock.json  package.json  pyproject.toml
agents/python/observee_agents/: __init__.py
agents/python/observee_agents/utils/: __init__.py
agents/ts/: README.md  package-lock.json  package.json  tsconfig.json
agents/ts/src/: index.ts  types.ts
agents/ts/src/adapters/: langchain-adapter.ts
agents/ts/src/agents/: agent.ts
agents/ts/src/providers/: anthropic.ts  base.ts  gemini.ts  index.ts  openai.ts
agents/ts/src/search/: base.ts  bm25Filter.ts  index.ts
agents/ts/src/utils/: mcp-client.ts
auth/python/: README.md  pyproject.toml
auth/ts/: README.md  package-lock.json  package.json
auth/ts/src/: auth.ts  index.ts
docs/: index.mdx  mcpaiagents.mdx  quickstart-mcp-api.mdx  quickstartmcpdev.mdx
docs/agentsdk/: chat.mdx  configuration.mdx  installation.mdx  overview.mdx  tools.mdx
docs/authsdk/: authentication.mdx  installation.mdx  overview.mdx
docs/integrations/python/: anthropic.mdx  crewai.mdx  langchain.mdx  langgraph.mdx  openai-sdk.mdx
docs/integrations/typescript/: ai-sdk.mdx  mastra.mdx  openai-sdk.mdx
docs/loggersdk/: installation.mdx  logging.mdx  overview.mdx
examples/python/: example_local_storage.py  test_custom_tools_simple.py  test_streaming.py
examples/typescript/: basic-usage.mdx  tool-usage.mdx
logger/ts/: README.md  package-lock.json  package.json
logger/ts/src/: index.ts  logger.ts  logging.ts  middleware.ts  types.ts  utils.ts
